[package]
name = "rnvm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
xz2 = "0.1.7"
